--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=fileuploadtemplate
+
+
+
+# ===========================================================
+#- Datasource properties
+# ===========================================================
+spring.datasource.url=jdbc:postgresql://localhost:5432/fileupload
+spring.datasource.username=postgres
+spring.datasource.password=1234
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===========================================================
+#- Cloudinary
+# ===========================================================
+#cloudinary.cloud_name = 584298145817731
+#cloudinary.api_key = dbrqyy9fu
+#cloudinary.api_secret = _Ut_lwFBT1cbcjiiyXu8mCDiTl0
+
+
