--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>1.31.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>com.cloudinary</groupId>-->
 <!--			<artifactId>cloudinary</artifactId>-->
